add build scripts, logo and icon